--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3"
+   
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start ",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
